--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -23,7 +23,7 @@
 \item ここで, $n$ と $b$ はパラメータである
 \item $\mathcal{C}_{i}$ の期間 $T_{i}$ は [50,200] の範囲でランダムに選択され, 相対デッドライン $D_{i}$ は $T_{i}$ に等しくなるように設定される
 \item (2) 各チェーンの使用率 $U_{i}$ は, UUniFast 破棄アルゴリズム [17] によって生成される
-\item すべてのチェーンの合計使用率は, 正規化された使用率 $U_{n o r m}$ に $m$ を掛けて決定される $(0, m]$ の範囲で選択される
+\item 全てのチェーンの合計使用率は, 正規化された使用率 $U_{n o r m}$ に $m$ を掛けて決定される $(0, m]$ の範囲で選択される
 \item 次に, システムの総使用率を各チェーンに分配する
 \item 特に, 各 $\mathcal{C}_{i}$ の $U_{i}$ は 1 以下である
 \item 同様の方法で, 各チェーンの使用率を個々のコールバックに分配し, 各コールバックの WCET は, その使用率に期間 $T_{i}$ (最も近い整数に丸められる) を掛けることによって導き出される
@@ -34,8 +34,8 @@
 \begin{frame}{}
     \begin{itemize}
         \item (3) mutually exclusiveグループの数 $\left|\bigcup_{\forall \mathcal{C}_{i} \in \Gamma} \theta_{i}\right|$ は, $g$ をパラメーターとして $[0, g]$ の範囲内でランダムに選択され, mutually exclusiveグループ内のコールバックの総数は, $\alpha$ が $[0.1,1]$ に収まる比率である $\alpha \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|$ によって決定される
-\item 相互コールバックグループのコールバックは, すべてのコールバックからランダムに選択され, mutually exclusive各コールバックグループに分散される
-\item 残りのコールバックはすべてreentrantコールバックグループに割り当てられる
+\item 相互コールバックグループのコールバックは, 全てのコールバックからランダムに選択され, mutually exclusive各コールバックグループに分散される
+\item 残りのコールバックは全てreentrantコールバックグループに割り当てられる
 \item (4) 各コールバックの優先度は, セット $\left\{1,2, \cdots, \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|\right\}$ からランダムに選択された一意の ID に従う
 \item 数値が小さいほど, 優先度が高くなる
     \end{itemize}
@@ -50,7 +50,7 @@
 
                   \item  OUR-2: Theorem 3 とTheorem 2 によって実行されるスケジュール可能性テスト
 
-                  \item  SIMU: すべてのチェーンが最初のインスタンスを同時にリリースし, 各チェーンができるだけ早くインスタンスをリリースし, 各コールバックインスタンスが WCET に対して実行されると仮定した場合の, シミュレーションでの各チェーンの観測された最大応答時間
+                  \item  SIMU: 全てのチェーンが最初のインスタンスを同時にリリースし, 各チェーンができるだけ早くインスタンスをリリースし, 各コールバックインスタンスが WCET に対して実行されると仮定した場合の, シミュレーションでの各チェーンの観測された最大応答時間
 \item シミュレーションは 5000 時間単位続きます
 \item SIMU の結果は, 実際の最悪の場合の応答時間の測定された下限に基づいていることに注意
 
@@ -64,7 +64,7 @@
 \item 図 6.(a)-(f) では, 基本的な構成を設定し, 実験の各グループで 1 つのパラメーターを変更し, 他のパラメーターは変更しない
 \item 基本的な構成は次のとおりである
 \item $m=4, n=8, b=5, U_{n o r m}=0.3, g=2$ および $\alpha=0.2$ 
-\item 図 6.(a) は, 異なる $U_{\text {norm }}$ でのすべてのテストの合格率を示している
+\item 図 6.(a) は, 異なる $U_{\text {norm }}$ での全てのテストの合格率を示している
 \item 図 6.(b) は, 異なる $n$ での受け入れ率を評価したものである
 \item 図 6.(c) では, 異なる $b$ でチェーンが生成される
 \item 図 6.(d) では, 異なる数のmutually exclusive コールバックグループを生成する
@@ -83,7 +83,7 @@
 \item その理由の 1 つは, SIMU が安全な境界ではなく下限であり, 比較的短い時間間隔で測定されるためである (シミュレーションには非常に時間がかかり, 妥当なサンプルサイズを維持しながらシミュレーションを長時間実行することはできない)
 \item
 \item それにもかかわらず, テストを改善する余地はまだ大きいと考えている
-\item 単純な改善は, 「キャリーイン」と「キャリーアウト」のコールバックインスタンスのすべての組み合わせを考慮して, 干渉している各チェーン $\mathcal{C}_{k}$ のより正確な $\overrightarrow{\mathcal{M}}_{k}$ を取得することである (本論文では, これは最大数のチェーンインスタンス全体を含むと想定されている)
+\item 単純な改善は, 「キャリーイン」と「キャリーアウト」のコールバックインスタンスの全ての組み合わせを考慮して, 干渉している各チェーン $\mathcal{C}_{k}$ のより正確な $\overrightarrow{\mathcal{M}}_{k}$ を取得することである (本論文では, これは最大数のチェーンインスタンス全体を含むと想定されている)
 \item より厳しい応答時間の境界を取得する (スペースの制限のため, ここではアルゴリズムを提示しないが, 直感を示す)
 \item また, より正確なテストを導出するために, より多くの制約を作成することもできる
 \item これは, 本論文の方法で簡単に拡張できる
@@ -116,7 +116,7 @@
     \begin{itemize}
         \item 最初のケーススタディは, Choi らによって開発された図 10 のサブチェーンから引用されている
 \item [13] の現実的な自動運転システムから
-\item すべてのコールバックは, reentrant コールバックグループにあると見なされる
+\item 全てのコールバックは, reentrant コールバックグループにあると見なされる
 \item Theorem 2 によって各チェーンの応答時間の限界を計算する (システムはTheorem 3 に従ってスケジュール可能である)
 \item 結果を表ＶＩに示す
 \item マルチスレッドエグゼキュータによってスケジュールされた各チェーンの応答時間は, シングルスレッドエグゼキュータよりもはるかに短いことが分かる
@@ -127,8 +127,8 @@
 \begin{frame}{}
     \begin{itemize}
         \item 本論文が観察した興味深い問題は, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキュータよりもはるかに遅くなる可能性があることである
-\item 特に, すべてのコールバックがmutually exclusive同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
-\item すべてのコールバックは, mutually exclusive同じグループに割り当てられる
+\item 特に, 全てのコールバックがmutually exclusive同じグループにある場合でも, 全てのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
+\item 全てのコールバックは, mutually exclusive同じグループに割り当てられる
     \end{itemize}
 \end{frame}
 
