--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -16,7 +16,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item Casiniは, ROS 2エグゼキュータの形式的モデリングと解析に関する最初の仕事[8]を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の解析の基礎を築いた.[10]は, 応答時間分析技術を改善し, 応答時間を最適化するための優先度割り当て戦略を提案した.[12]は, 実際の実行時間のばらつきを考慮して[8]を改良し, ROS 2のスケジューリング機能をさらに探求しました.[13]は, ROS 2フレームワークのための新しい優先順位駆動型チェーンアウェアスケジューラを提案し, 提案スケジューラのエンドツーエンドレイテンシ分析を実施しました.[24] は ROS Live latency manager (ROSLlama) を導入し, エンドツーエンド遅延を制御するために既存のリアルタイムメカニズムを使用し, ランタイムに必要なすべてのスケジューリングパラメータを自動的に推定しました.特に, [24]は応答時間を束縛するために[8]の結果に依存しています.要約すると, すべての既存研究は, シングルスレッド実行ファイルの分析に重点を置いています.
+        \item Casiniは, ROS 2エグゼキュータの形式的モデリングと解析に関する最初の仕事[8]を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の解析の基礎を築いた.[10]は, 応答時間分析技術を改善し, 応答時間を最適化するための優先度割り当て戦略を提案した.[12]は, 実際の実行時間のばらつきを考慮して[8]を改良し, ROS 2のスケジューリング機能をさらに探求しました.[13]は, ROS 2フレームワークのための新しい優先順位駆動型チェーンアウェアスケジューラを提案し, 提案スケジューラのエンドツーエンドレイテンシ分析を実施しました.[24] は ROS Live latency manager (ROSLlama) を導入し, エンドツーエンド遅延を制御するために既存のリアルタイムメカニズムを使用し, ランタイムに必要な全てのスケジューリングパラメータを自動的に推定しました.特に, [24]は応答時間を束縛するために[8]の結果に依存しています.要約すると, 全ての既存研究は, シングルスレッド実行ファイルの分析に重点を置いています.
     \end{itemize}
 \end{frame}
 
@@ -30,6 +30,6 @@
 \item [30] 複数のプロセッサを横断するトリガチェーンのエンドツーエンドのレイテンシを最適化した
 \item マルチプロセッサ上のシーケンシャルリアルタイムタスクの従来のノンプリエンプティブスケジューリングについて, [31] は, EDF でスケジュールされた周期的タスクに対して, 十分ではあるが必須ではない多項式時間のスケジューリング可能性テスト条件を提案した
 \item [32] は, EDF の下で線形時間の複雑さを備えた新しい十分なテストを提案し, さらに, EDF と FP スケジューリングの疑似多項式の時間複雑さの改善されたテスト条件をそれぞれ提示した
-\item それにもかかわらず, これらのすべての作業は, ROS 2 エグゼキュータの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない
+\item それにもかかわらず, これらの全ての作業は, ROS 2 エグゼキュータの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない
     \end{itemize}
 \end{frame}
