--- a/setting.tex
+++ b/setting.tex
@@ -158,6 +158,7 @@
 \newcommand{\tu}[1]{\textbf{\underline{#1}}}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
 \newcommand{\db}[1]{\doublebox{#1}}
+\newcommand{\hlink}[2]{\hyperlink{#1}{\underline{#2} }}
 \setlength{\fboxsep}{0.4mm}
 \newcommand{\desc}[2]{\textbf{\doublebox{#1}: }#2}
 \newcommand{\full}[1]{
