3: the_second_bound

--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
@@ -226,7 +226,7 @@
     \fitimage{図 4 は, 最悪のシナリオにおける $W_{k}(L)$ を示している}{figure/w_k_l.png}
 \end{frame}
 
-\begin{frame}{Theorem 1}
+\begin{frame}[label=theorem1]{Theorem 1}
     \begin{theorem}[]
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
