--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 主なアイデアは, \tu{$J$ の個々のコールバックインスタンスに関して, }\\\tu{サブ干渉シーケンスの全ての可能な組み合わせを検索し, }\\\tu{最大の $\mathcal{Q}_{k}$ になる組み合わせを見つけること}
+        \item 主なアイデアは, \tu{$J$ の個々のコールバックインスタンスに関して, }\\\tu{サブ干渉シーケンスの任意の組み合わせを探索し, }\\\tu{最大の $\mathcal{Q}_{k}$ になる組み合わせを見つけること}
         \item つまり, 干渉チェーン $\mathcal{C}_{k}$ ごとに, 干渉シーケンスを形成する $\mathcal{C}_{k}$ のコールバックインスタンスのコレクションを識別して, $\mathcal{Q}_{k}$ を最大化しようとする
     \end{itemize}
 \end{frame}
@@ -63,7 +63,7 @@
 \begin{frame}{以降の流れ}
     \begin{itemize}
         \item 目的は, \tu{$\mathcal{Y}$ の干渉シーケンスによって生じる $\mathcal{Q}_{k}$ が最大化されるように,}\\ \tu{タイムウィンドウのセット $\mathcal{Y}$ を見つけること}
-        \item 全てのケースを列挙できるが, そのようなウィンドウセットの検索空間は組み合わせ爆発になる可能性がある
+        \item 全てのケースを列挙できるが, そのようなウィンドウセットの探索空間は組み合わせ爆発になる可能性がある
         \item この問題を解決するために, サブ干渉シーケンスが $J$ のコールバックインスタンスに干渉するために満たさなければならない制約を導き出す
               % \item 具体的には, 考慮されるコールバックインスタンスをブロックできるかどうかに応じて, 2 つのケースを区別する
         \item そして, 考えられる全ての干渉シーケンスの中で発生する可能性のある $\mathcal{Q}_{k}$ の上界を効率的に取得するアルゴリズムを開発する
@@ -148,28 +148,30 @@
 \end{frame}
 
 \begin{frame}{$c_{i}$ がブロックされない場合の $\Phi_{k, i}$の上界}
-    $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, すなわち $c_{i}$ をブロックできない場合, \db{$\hat{\Phi}_{k, i}$} で示される $\Phi_{k, i}$ の上界を取得できる
-    \begin{equation*}
-        \hat{\Phi}_{k, i}=\left\{\begin{array}{lr}
-            0,                  & m \geq \Gamma         \\
-            \mathcal{I}_{k, i}, & \text { otherwise } .
-        \end{array}\right.
-    \end{equation*}
-
-    Lemma8から成り立つ
+    \begin{definition}[$c_{i}$ がブロックされない場合の $\Phi_{k, i}$の上界 $\hat{\Phi}_{k, i}$]
+        $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合の $\Phi_{k, i}$の上界 $\hat{\Phi}_{k, i}$
+        \begin{equation*}
+            \hat{\Phi}_{k, i}=\left\{\begin{array}{lr}
+                0,                  & m \geq \Gamma         \\
+                \mathcal{I}_{k, i}, & \text { otherwise } .
+            \end{array}\right.
+        \end{equation*}
+        \notes{Lemma 8から成り立つ}
+    \end{definition}
 \end{frame}
 
 \begin{frame}{$c_{i}$ がブロックされる場合の $\Phi_{k, i}$の上界}
-    $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ , すなわち $c_{i}$ がブロックされる可能性がある場合, $\hat{\Phi}_{k, i}$ は次で取得できる
-    \begin{equation*}
-        \hat{\Phi}_{k, i}=\left\{\begin{array}{lr}
-            \mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i}^{\mathcal{B}}-\mathcal{I}_{k, i}^{\mathcal{E}^{*}}, & m \geq \Gamma         \\
-            \mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i},                                                    & \text { otherwise } .
-        \end{array}\right.
-    \end{equation*}
-    \notes{\desc{$\mathcal{I}_{k, i}^{\mathcal{E}^{*}}$}{$\mathcal{S}_{k, i}$ 内の $c_{i}$ とは異なるコールバックグループに属すコールバックインスタンスの合計実行時間}}
-
-    Lemma10から成り立つ
+    \begin{definition}[$c_{i}$ がブロックされる場合の $\Phi_{k, i}$の上界 $\hat{\Phi}_{k, i}$]
+        $c_{i}$ が $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ に属している場合の $\Phi_{k, i}$の上界 $\hat{\Phi}_{k, i}$
+        \begin{equation*}
+            \hat{\Phi}_{k, i}=\left\{\begin{array}{lr}
+                \mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i}^{\mathcal{B}}-\mathcal{I}_{k, i}^{\mathcal{E}^{*}}, & m \geq \Gamma         \\
+                \mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i},                                                    & \text { otherwise } .
+            \end{array}\right.
+        \end{equation*}
+        \notes{\desc{$\mathcal{I}_{k, i}^{\mathcal{E}^{*}}$}{$\mathcal{S}_{k, i}$ 内の $c_{i}$ とは異なるコールバックグループに属すコールバックインスタンスの合計実行時間}}
+        \notes{Lemma 10から成り立つ}
+    \end{definition}
 \end{frame}
 
 \begin{frame}{$\Phi_{k, i}$ の上界 $\hat{\Phi}_{k, i}$ まとめ}
@@ -182,7 +184,7 @@
 \begin{frame}{$\mathcal{Q}_{k}(\mathcal{Y})$ の導入}
     \begin{itemize}
         \item $\mathcal{Y}$ によって生じた干渉シーケンス $\mathcal{S}_{k}$ が与えられた場合, \db{$\mathcal{Q}_{k}(\mathcal{Y})$} を使用して, 各サブ干渉シーケンス $\mathcal{S}_{k, i}$ に関する $\hat{\Phi}_{k, i}$ の合計を示す
-        \item $\mathcal{Q}_{k}(\mathcal{Y})$ は $\mathcal{Y}$ によって\al{引き起こされた}と呼ぶ
+        \item $\mathcal{Q}_{k}(\mathcal{Y})$ は $\mathcal{Y}$ に\al{起因する}と呼ぶ
     \end{itemize}
 \end{frame}
 
@@ -190,53 +192,50 @@
     \begin{itemize}
         \item 結果として得られる各サブ干渉シーケンスが Lemma 6-10 を満たす可能なウィンドウの組み合わせを全て列挙し, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を $\mathcal{Q}_{k}$ の安全な上界と見なすことができる
         \item しかし, これは計算量の爆発になる可能性がある
-        \item この問題を解決するために, まず, ウィンドウの境界の検索スペースを $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの境界に制限できることを示す
+        \item この問題を解決するために, まず, ウィンドウの境界の探索スペースを $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの境界に制限できることを示す
         \item 次に, 動的計画法 (DP) に基づくアルゴリズムを開発して, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ の上界を計算する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{分からない}
     \begin{itemize}
         \item $\mathcal{C}_{k}$ の干渉シーケンスが $\mathcal{Y}=\left\{\left(t_{1}, t_{1}^{\prime}\right),\left(t_{2}, t_{2}^{\prime}\right), \cdots,\left(t_{|\mathcal{C}|}, t_{|\mathcal{C}|}^{\prime}\right)\right\}$ の結果であり, $\overrightarrow{\mathcal{M}}_{k}$ の開始時刻 $t_{x}$ と終了時刻 $t_{y}$ を持つコールバックインスタンス $c$ が $t_{x} \in\left[t_{a}, t_{a}^{\prime}\right)$ と $t_{y} \in\left[t_{b}, t_{b}^{\prime}\right)$ を満たすと仮定する
         \item ここで, $a, b \in[1,|\mathcal{C}|]$ と $a<b$, つまり $c$ の実行時間は, 異なるサブ干渉シーケンスによって構成される
-        \item $\mathcal{Y}$ の $a^{t h}$ から $b^{t h}$ の要素を, 表 II の 2 番目の列のそれぞれで置き換え, $\mathcal{Y}_{a}$ から $\mathcal{Y}_{b}$ で示される新しいウィンドウセット $b-a+1$ を取得する
-        \item $\mathcal{Y}$ に起因する干渉シーケンスと比較して, 異なるサブ干渉シーケンスでの $c$ の合計実行時間は, $\mathcal{Y}_{j}$ に起因する干渉シーケンスの $j^{t h}$ 項目によって完全に構成されると見なされるが, $c$ とは関係のない他のサブ干渉シーケンスはそのままである
+        \item $\mathcal{Y}$ の $ a $番目から $ b $番目の要素を, 表 II の 2 番目の列のそれぞれで置き換え, $\mathcal{Y}_{a}$ から $\mathcal{Y}_{b}$ で示される新しいウィンドウセット $b-a+1$ を取得する
+        \item $\mathcal{Y}$ に起因する干渉シーケンスと比較して, 異なるサブ干渉シーケンスでの $c$ の合計実行時間は, $\mathcal{Y}_{j}$ に起因する干渉シーケンスの $ j $番目の要素によって完全に構成されると見なされるが, $c$ とは関係のない他のサブ干渉シーケンスは変わらない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Lemma11}
-    $\mathcal{Q}_{k}(\mathcal{Y}) \leq \max _{\forall j \in[a, b]}\left\{\mathcal{Q}_{k}\left(\mathcal{Y}_{j}\right)\right\}$
+    Lemma 11 は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示す
+    \begin{lemma}[]
+        $\mathcal{Q}_{k}(\mathcal{Y}) \leq \max _{\forall j \in[a, b]}\left\{\mathcal{Q}_{k}\left(\mathcal{Y}_{j}\right)\right\}$
+    \end{lemma}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{$\Phi_{k, i}^{p, q}$ の導入}
     \begin{itemize}
-        \item Lemma 11 は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示している
-        \item ただし, 全ての可能な組み合わせの数は依然として非常に多い場合がある
-        \item この問題をより効率的に解決するために, 動的計画法 (DP) に基づく方法を開発する
+        \item 任意の組み合わせの数は依然として非常に多いため, 動的計画法 (DP) に基づく手法を開発する
+        \item \desc{$\Phi_{k, i}^{p, q}$}{$\overrightarrow{\mathcal{M}}_{k}$ の$ p $番目のコールバックインスタンスの開始時刻から$ q $番目のコールバックインスタンスの開始時刻までの範囲内にある任意のウィンドウによって発生しうる最大の $\hat{\Phi}_{k, i}$}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 以下では, 最初にこの方法の重要な部分を紹介する
-        \item $p^{t h}$ の開始時間からの範囲内に境界を持つウィンドウによって生じる, 全ての可能なサブ干渉シーケンスの中で, $\Phi_{k, i}$ から $c_{i}$ への上界を取得する方法コールバックインスタンスを $\overrightarrow{\mathcal{M}}_{k}$ の $q^{t h}$ コールバックインスタンスの開始時刻に合わせる
-    \end{itemize}
+\begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム全体象}
+    \fullimage{figure/alg1.png}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 手順をアルゴリズム 1 に示す
-        \item $p=q$ の場合, $\left[r_{i}, s_{i}\right)$ 中に $\mathcal{C}_{k}$ からのコールバックインスタンスを実行できないため, $\Phi_{k, i}$ の上界は 0 である
-        \item $c_{i}$ をブロックできる場合, Lemma 9 を満たす各サブ干渉シーケンスを列挙し, 3 行目から 13 行目に示すように, 次の式 (4) によって $\hat{\Phi}_{k, i}$ (アルゴリズム 1 の $\operatorname{sum}[j]$ で示される) を計算する
-        \item それ以外の場合, 14 行目から 21 行目に示すように, Lemma 6 ～ 8 を満たす各サブ干渉シーケンスを列挙し, 式 (3) に従って $\hat{\Phi}_{k, i}$ を計算する
-        \item 最後に, $\Phi_{k, i}^{p, q}$ の上界は, 考えられる全てのサブ干渉シーケンスの中で $\hat{\Phi}_{k, i}$ の最大値を取得することによって取得される
-    \end{itemize}
+\begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム補足1}
+    \fullimage{figure/alg1_sup1.jpg}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 図 5 を例にとると, $\Phi_{2,1}^{1,5}$ と $\Phi_{2,2}^{1,5}$ の計算, つまり, 最初のコールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{2}$ の 5 番目のコールバックインスタンスの開始時刻は, 表 III の 2 列目と 3 列目にそれぞれ示されている
-    \end{itemize}
+\begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム補足2}
+    \fullimage{figure/alg1_sup2.jpg}
+\end{frame}
+
+\begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム例}
+    \fitimage{
+        $\Phi_{2,1}^{1,5}$ と $\Phi_{2,2}^{1,5}$ の計算, つまり, 最初のコールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{2}$ の 5 番目のコールバックインスタンスの開始時刻を表に示す
+    }{figure/alg1_ex.jpg}
 \end{frame}
 
 
@@ -244,49 +243,51 @@
 \label{ssec: upper bounding response time}
 
 \begin{frame}{}
+    次に, $J$ の各コールバックに関してウィンドウの全ての組み合わせを探索し, 最後に $\mathcal{Q}_{k}$ の上界を計算する
+\end{frame}
+
+\begin{frame}{次の疑似アルゴリズムに登場する表記法}
     \begin{itemize}
-        \item 次に, $J$ の各コールバックに関してウィンドウの全ての組み合わせを検索し, 最後に $\mathcal{Q}_{k}$ の上界を計算する
-        \item プロシージャの疑似コードをアルゴリズム 2 に示す
-        \item ここで, $\left|\overrightarrow{\mathcal{M}}_{k}\right|$ は $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの数である
+        \item \desc{$\left|\overrightarrow{\mathcal{M}}_{k}\right|$}{$\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの数}
+        \item $i \in[1,|\mathcal{C}|]$, \desc{$\Theta_{i, p}$}{\\$ p $番目のコールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{k}$ の最後のコールバックインスタンスの終了時刻までの範囲に収まる任意のウィンドウによって発生しうる最大の $\sum_{j=i}^{|\mathcal{C}|} \hat{\Phi}_{k, j}$}
+        \begin{itemize}
+            \item $p=\left|\overrightarrow{\mathcal{M}}_{k}\right|+1$ の場合の $\Theta_{i, p}=0$ は, $\mathcal{C}_{k}$ からのコールバックインスタンスがないことを示し, $c_{|\mathcal{C}|}$ に干渉する可能性がある
+            \item 自明に $\Theta_{i, p}=\max _{\forall q \in\left[p,\left|\overrightarrow{\mathcal{M}}_{k}\right|+1\right]}\left\{\Phi_{k, i}^{p, q}+\Theta_{i+1, q}\right\}$
+        \end{itemize}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 各整数について, $i \in[1,|\mathcal{C}|], \Theta_{i, p}$ は, $p^{t h}$ コールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{k}$ の最後のコールバックインスタンスの終了時刻までの範囲に収まる全ての可能なウィンドウによって発生する可能性がある最大 $\sum_{j=i}^{|\mathcal{C}|} \hat{\Phi}_{k, j}$ を示す
-        \item 特に, $p=\left|\overrightarrow{\mathcal{M}}_{k}\right|+1$ の場合の $\Theta_{i, p}=0$ は, $\mathcal{C}_{k}$ からのコールバックインスタンスがないことを示し, $c_{|\mathcal{C}|}$ に干渉する可能性がある
-        \item 明らかに, $\Theta_{i, p}=\max _{\forall q \in\left[p,\left|\overrightarrow{\mathcal{M}}_{k}\right|+1\right]}\left\{\Phi_{k, i}^{p, q}+\Theta_{i+1, q}\right\}$ が成立する
-        \item ここで, $\Phi_{k, i}^{p, q}$ はアルゴリズム 1 によって計算され, $p^{t h}$ コールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{k}$ の $q^{t h}$ コールバックインスタンスの開始時刻までの範囲内にある任意のウィンドウによって発生する可能性がある最大 $\hat{\Phi}_{k, i}$ を表す
-    \end{itemize}
+\begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム全体像}
+    \fullimage{figure/alg2.png}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item $J$ の $(|\mathcal{C}|+1)^{t h}$ コールバックインスタンスが存在しないため, 全ての $q$ に対して $\Theta_{|\mathcal{C}|+1, q}=0$ を初期化する
-        \item アルゴリズムは $i=|\mathcal{C}|$ で始まる
-        \item 次に, $c_{|\mathcal{C}|}$ へのサブ干渉シーケンスのみが考慮されるため, $\Theta_{|\mathcal{C}|, p}=\max _{\forall q \in\left[p,\left|\overrightarrow{\mathcal{M}}_{k}\right|+1\right]}\left\{\Phi_{k, i}^{p, q}\right\}$
-        \item この手順は, $\Theta_{1,1}$, つまり, $\overrightarrow{\mathcal{M}}_{k}$ の最初のコールバックインスタンスの開始時間から最後のコールバックインスタンスの終了時間までの範囲に収まる全ての可能なウィンドウによって発生する可能性のある最大 $\sum_{i=1}^{|\mathcal{C}|} \hat{\Phi}_{k, i}$ が取得されるまで繰り返される
-        \item つまり, $\Theta_{1,1}$ は $\mathcal{Q}_{k}$ の上界である
-    \end{itemize}
+\begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム補足}
+    \fullimage{figure/alg2_sup.jpg}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 例えば, 図5のC3のチェーンインスタンスに対して, -→M2の全ての可能な干渉配列によって引き起こされる可能性のあるQ2の上界は, 表IVに示されている.
-    \end{itemize}
+\begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム例}
+    \fitimage{
+        $\mathcal{C}_3$ のチェーンインスタンスに対して, $\overrightarrow{\mathcal{M}}_{2}$ の任意の干渉シーケンスによって発生しうる$\mathcal{Q}_2$ の上界を表に示す
+    }{figure/alg2_ex.jpg}
 \end{frame}
 
-\begin{frame}{Theorem 2}
-    $L+e_{|\mathcal{C}|} \leq D$ の場合, $R(J)$ の上界は $L+e_{|\mathcal{C}|}$ である
-    ここで, $L$ は次の条件を満たす最小数である
+\begin{frame}[label=theorem2]{Theorem 2}
+    \begin{theorem}[]
+        \begin{itemize}
+            \item $L+e_{|\mathcal{C}|} \leq D$ の場合, $R(J)$ の上界は $L+e_{|\mathcal{C}|}$ である
+            \item ここで, $L$ は次の条件を満たす最小数
 
-    \begin{equation*}
-        L=E-e_{|\mathcal{C}|}+\frac{\sum_{\mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \mathcal{Q}_{k}}{m} .
-    \end{equation*}
-
-    ここで, $\mathcal{Q}_{k}$ は, $\mathcal{C}_{k}$ の $n_{k}(L)$ インスタンスを含む $\overrightarrow{\mathcal{M}}_{k}$ を使用してアルゴリズム 2 によって計算される
+            \begin{equation*}
+                L=E-e_{|\mathcal{C}|}+\frac{\sum_{\mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \mathcal{Q}_{k}}{m} .
+            \end{equation*}
+            \vspace{3mm}
+            \notes{$\mathcal{Q}_{k}$ は, $\mathcal{C}_{k}$ の $n_{k}(L)$ インスタンスを含む $\overrightarrow{\mathcal{M}}_{k}$ を使用してアルゴリズム 2 によって計算される}
+        \end{itemize}
+    \end{theorem}
 \end{frame}
 
-\begin{frame}{Theorem3}
-    $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ がTheorem 1 または 2 によって取得される場合, $\Gamma$ はスケジュール可能である
+\begin{frame}[label=theorem3]{Theorem 3}
+    \begin{theorem}[]
+        $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ が \hlink{theorem1}{Theorem 1} または \hlink{theorem2}{Theorem 2} によって取得される場合, $\Gamma$ はスケジュール可能である
+    \end{theorem}
 \end{frame}
