--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
@@ -72,7 +72,7 @@
 \end{frame}
 
 \begin{frame}{サブ干渉シーケンスの例}
-    \fullimage{figure/sub_interfering_sequence_ex.jpg}
+    \fullimage{sub_interfering_sequence_ex.jpg}
 \end{frame}
 
 \begin{frame}{干渉シーケンス}
@@ -223,7 +223,7 @@
 % \end{frame}
 
 \begin{frame}{}
-    \fitimage{図 4 は, 最悪のシナリオにおける $W_{k}(L)$ を示している}{figure/w_k_l.png}
+    \fitimage{図 4 は, 最悪のシナリオにおける $W_{k}(L)$ を示している}{w_k_l.png}
 \end{frame}
 
 \begin{frame}[label=theorem1]{Theorem 1}
