--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -288,7 +288,7 @@
             \item $\mathcal{C}_{1}=\left\{c_{1,1}, c_{1,2}\right\}, \mathcal{C}_{2}=\left\{c_{2,1}, c_{2,2}\right\}$ と $\mathcal{C}_{3}=\left\{c_{3,1}, c_{3,2}, c_{3,3}, c_{3,4}\right\}$ の 2 つのスレッドでスケジュールされた 3 つのチェーンがある
             \item $c_{2,2}$ と $c_{3,2}$ は同じmutually exclusiveコールバックグループに属し, 他のコールバックはreentrant コールバックグループに属す
         \end{itemize}
-    }{figure/system_model_example_a.png}
+    }{system_model_example_a.png}
 \end{frame}
 
 \begin{frame}{例の前提2}
@@ -297,7 +297,7 @@
             \item 表は全てのコールバックの優先度と WCET を示す
             \item 数字が小さいほど優先度が高くなる
         \end{itemize}
-    }{figure/system_model_example_b.png}
+    }{system_model_example_b.png}
 \end{frame}
 
 \begin{frame}{例の前提3}
@@ -306,13 +306,13 @@
             \item 上矢印はチェーンインスタンスのリリース時刻を表す
             \item 右の表は各ポーリングポイントでの $\Omega$ 内のコールバックインスタンスを示す
         \end{itemize}
-    }{figure/system_model_example_c_d.png}
+    }{system_model_example_c_d.png}
 \end{frame}
 
 \begin{frame}{Rブロック例}
-    \fullimage{figure/system_model_example_sup1.jpg}
+    \fullimage{system_model_example_sup1.jpg}
 \end{frame}
 
 \begin{frame}{Pブロック例}
-    \fullimage{figure/system_model_example_p_blocked.jpg}
+    \fullimage{system_model_example_p_blocked.jpg}
 \end{frame}
