--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -56,7 +56,7 @@
             \item $J_{3}^{1}$ の問題ウィンドウの長さは 8 で, その間に $\mathcal{C}_{2}$ の最大 2 つのチェーンインスタンスが実行される可能性がある (Lemma 3)
             \item $\mathcal{C}_{2}$ から $J_{3}^{1}$ への干渉シーケンスは, 一連のウィンドウ $\mathcal{Y}=\{ null, (1,3), null, (3,4)\}$ によって発生する
         \end{itemize}
-    }{figure/super_interfering_sequence_ex.jpg}
+    }{super_interfering_sequence_ex.jpg}
 \end{frame}
 
 
@@ -221,21 +221,21 @@
 \end{frame}
 
 \begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム全体象}
-    \fullimage{figure/alg1.png}
+    \fullimage{alg1.png}
 \end{frame}
 
 \begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム補足1}
-    \fullimage{figure/alg1_sup1.jpg}
+    \fullimage{alg1_sup1.jpg}
 \end{frame}
 
 \begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム補足2}
-    \fullimage{figure/alg1_sup2.jpg}
+    \fullimage{alg1_sup2.jpg}
 \end{frame}
 
 \begin{frame}{$\Phi_{k, i}^{p, q}$ 計算疑似アルゴリズム例}
     \fitimage{
         $\Phi_{2,1}^{1,5}$ と $\Phi_{2,2}^{1,5}$ の計算, つまり, 最初のコールバックインスタンスの開始時刻から $\overrightarrow{\mathcal{M}}_{2}$ の 5 番目のコールバックインスタンスの開始時刻を表に示す
-    }{figure/alg1_ex.jpg}
+    }{alg1_ex.jpg}
 \end{frame}
 
 
@@ -258,17 +258,17 @@
 \end{frame}
 
 \begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム全体像}
-    \fullimage{figure/alg2.png}
+    \fullimage{alg2.png}
 \end{frame}
 
 \begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム補足}
-    \fullimage{figure/alg2_sup.jpg}
+    \fullimage{alg2_sup.jpg}
 \end{frame}
 
 \begin{frame}{$\mathcal{Q}_k$ の上界計算疑似アルゴリズム例}
     \fitimage{
         $\mathcal{C}_3$ のチェーンインスタンスに対して, $\overrightarrow{\mathcal{M}}_{2}$ の任意の干渉シーケンスによって発生しうる$\mathcal{Q}_2$ の上界を表に示す
-    }{figure/alg2_ex.jpg}
+    }{alg2_ex.jpg}
 \end{frame}
 
 \begin{frame}[label=theorem2]{Theorem 2}
