--- a/setting.tex
+++ b/setting.tex
@@ -18,6 +18,7 @@
 
 
 %%%%% Settings %%%%%
+\graphicspath{{./figure}}
 \usetheme[sectionpage=progressbar, subsectionpage=progressbar]{metropolis}
 % -- space between line --
 \renewcommand{\baselinestretch}{1.3}
