--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -117,7 +117,7 @@
     \begin{itemize}
         \item OUR-2 はさまざまなパラメーター設定の下で一貫して OUR-1 よりも優れており, 比較的大きなギャップがある
         \item 特に, OUR-2 の結果は SIMU よりも低く, この方法が安全であることを示す
-        \item ただし, SIMU と OUR-2 の間にはまだ余裕がある
+        \item しかし, SIMU と OUR-2 の間にはまだ余裕がある
         \item その理由の 1 つは, SIMU が比較的短い時間間隔で測定されるため, 安全な境界ではなないため (シミュレーションには非常に時間がかかり, 妥当なサンプルサイズを維持しながらシミュレーションを長時間実行することはできない)
     \end{itemize}
 \end{frame}
