--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -4,50 +4,58 @@
 \label{sec: introduction}
 
 \begin{frame}{ROS (Robot Operating System)}
-    \begin{itemize}
-        \item ROS (Robot Operating System) は, ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つ
-        \item ROS の主な哲学は, ソフトウェアのモジュール性と構成可能性を促進することにより, ロボットソフトウェア開発の生産性を向上させること
-        \item ただし, ROS にはリアルタイム機能がなく, 安全性が重要な環境での実装が制限される
-
-    \end{itemize}
+    \begin{block}{ROS (Robot Operating System)}
+        \begin{itemize}
+            \item ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つ
+            \item ソフトウェアのモジュール性と構成可能性を促進し, ロボットソフトウェア開発の生産性を向上
+        \end{itemize}
+    \end{block}
+    \vspace{5mm}
 \end{frame}
 
 \begin{frame}{ROS 2}
-    \begin{itemize}
-        \item ROS 2 は 2017 年にリリースされた第 2 世代の ROS であり, ROS から肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供する
-        \item 例えば, ROS 2 は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとして DDS (Data Distribution Service) を採用し, リアルタイムオペレーティングシステム上に展開できる
-    \end{itemize}
+    ROS にはリアルタイム機能がないため, \tb{ROS 2への移行が進んでいる}
+    \begin{block}{ROS 2}
+        \begin{itemize}
+            \item 2017 年にリリースされた第 2 世代の ROS
+            \item ROS から肯定的な側面を継承し, ロボットソフトウェアをサポートする強力なリアルタイム機能を提供
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{ハードリアルタイム制約}
-    \begin{itemize}
-        \item セーフクリティカルドメインのロボットソフトウェアはハードリアルタイム制約がある
-        \item 設計者はタイミング動作を正確にモデル化して分析を行い, リアルタイム制約を実行時に常に保証する必要がある
-    \end{itemize}
+    \tb{セーフクリティカルなロボットソフトウェアはハードリアルタイム制約がある}ため, 設計者はタイミング動作を正確にモデル化して分析を行い, リアルタイム制約を実行時に常に保証する必要がある
 \end{frame}
 
-\begin{frame}{エグゼキュータ}
+\begin{frame}{ROS 2 エグゼキュータ}
     \begin{itemize}
-
         \item ROS 2 のリアルタイムパフォーマンスに関連するコアコンポーネントはエグゼキュータ
-        \item エグゼキュータはプラットフォームとなる OS のスレッドでワークロードの実行を調整する
-        \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要
-
+        \begin{block}{エグゼキュータ}
+            OS のスレッドでワークロードの実行を調整
+        \end{block}
+        \vspace{5mm}
+        \item \tb{ROS 2 エグゼキュータのスケジューリング動作は過去の研究とは全く異なり, 新しい分析手法が必要}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{シングル/マルチスレッドエグゼキュータ}
     \begin{itemize}
-        \item ROS 2 には, ワークロードをシーケンシャルに実行するシングルスレッドエグゼキュータと, ワークロードの実行を複数のスレッドに分散するマルチスレッドエグゼキュータの 2 つの組み込みエグゼキュータがある
-        \item 最近の研究で, シングルスレッドエグゼキュータのリアルタイムパフォーマンスのモデリングと分析が行われたが, マルチスレッドエグゼキュータは未だ研究されていない
-        \item マルチコアプロセッサのコンピューティング能力を十分に活用するには, マルチスレッドエグゼキュータが必要
+        \item ROS 2 には以下2つの組み込みエグゼキュータが存在
+            \begin{block}{シングルスレッドエグゼキュータ}
+                ワークロードをシーケンシャルに実行するエグゼキュータ
+            \end{block}
+            \begin{block}{マルチスレッドエグゼキュータ}
+                ワークロードの実行を複数のスレッドに分散するエグゼキュータ
+            \end{block}
+        \vspace{5mm}
+        \item 最近の研究でシングルスレッドエグゼキュータのモデリングと分析が行われたが, \tb{マルチスレッドエグゼキュータは未研究}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{本論文の貢献}
     \begin{itemize}
-        \item ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に関する最初の作業を行う
-        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, その応答時間分析手法を開発する
-        \item エグゼキュータのスケジューリング動作による応答時間への影響を調査し, 複数のシングルスレッドエグゼキュータから 1 つのマルチスレッドエグゼキュータにワークロードをマージするときに応答時間が長くなるリスクを特定する
+        \item \tb{ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に\\関する最初の作業を実施}
+        \item \tb{マルチスレッドエグゼキュータ上に展開される処理チェーンとして\\実装されたシステムのスケジューリングモデルを提示し,\\その応答時間分析手法を開発}
+        \item \tb{エグゼキュータのスケジューリング動作による応答時間への影響を調査し, マルチスレッドエグゼキュータのリスクを特定}
     \end{itemize}
 \end{frame}
