--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -97,7 +97,7 @@
 \begin{frame}{チェーンモデル}
 
     \begin{itemize}
-        \item \tu{本論文では, $m$ スレッド上のマルチスレッドエグゼキュータによって}\\\tu{スケジュールされる一連の独立したチェーン $\Gamma=\left\{\mathcal{C}_{1}, \mathcal{C}_{2}, \cdots, \mathcal{C}_{|\Gamma|}\right\}$ を検討}
+        \item \tb{本論文では, $m$ スレッド上のマルチスレッドエグゼキュータによって}\\\tb{スケジュールされる一連の独立したチェーン $\Gamma=\left\{\mathcal{C}_{1}, \mathcal{C}_{2}, \cdots, \mathcal{C}_{|\Gamma|}\right\}$ を検討}
         \begin{itemize}
             \item \db{$|\Gamma|$}: $\Gamma$内のチェインの数
         \end{itemize}
@@ -150,8 +150,8 @@
 \begin{frame}{本論文の目的}
     本論文の目的は, 以下2つ
     \begin{itemize}
-        \item \tu{システム $\Gamma$ がマルチスレッドエグゼキュータでスケジュール可能かを判断}
-        \item \tu{$\Gamma$ がスケジュール可能である場合,} \\\tu{各チェーン $\mathcal{C}_{i} \in \Gamma$ の $\mathcal{R}_{i}^{w c}$ の安全な上界を計算}
+        \item \tb{システム $\Gamma$ がマルチスレッドエグゼキュータでスケジュール可能かを判断}
+        \item \tb{$\Gamma$ がスケジュール可能である場合,} \\\tb{各チェーン $\mathcal{C}_{i} \in \Gamma$ の $\mathcal{R}_{i}^{w c}$ の安全な上界を計算}
     \end{itemize}
 \end{frame}
 
