--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 主なアイデアは, \tu{$J$ の個々のコールバックインスタンスに関して, }\\\tu{サブ干渉シーケンスの任意の組み合わせを探索し, }\\\tu{最大の $\mathcal{Q}_{k}$ になる組み合わせを見つけること}
+        \item 主なアイデアは, \tb{$J$ の個々のコールバックインスタンスに関して, }\\\tb{サブ干渉シーケンスの任意の組み合わせを探索し, }\\\tb{最大の $\mathcal{Q}_{k}$ になる組み合わせを見つけること}
         \item つまり, 干渉チェーン $\mathcal{C}_{k}$ ごとに, 干渉シーケンスを形成する $\mathcal{C}_{k}$ のコールバックインスタンスのコレクションを識別して, $\mathcal{Q}_{k}$ を最大化しようとする
     \end{itemize}
 \end{frame}
@@ -62,7 +62,7 @@
 
 \begin{frame}{以降の流れ}
     \begin{itemize}
-        \item 目的は, \tu{$\mathcal{Y}$ の干渉シーケンスによって生じる $\mathcal{Q}_{k}$ が最大化されるように,}\\ \tu{タイムウィンドウのセット $\mathcal{Y}$ を見つけること}
+        \item 目的は, \tb{$\mathcal{Y}$ の干渉シーケンスによって生じる $\mathcal{Q}_{k}$ が最大化されるように,}\\ \tb{タイムウィンドウのセット $\mathcal{Y}$ を見つけること}
         \item 全てのケースを列挙できるが, そのようなウィンドウセットの探索空間は組み合わせ爆発になる可能性がある
         \item この問題を解決するために, サブ干渉シーケンスが $J$ のコールバックインスタンスに干渉するために満たさなければならない制約を導き出す
               % \item 具体的には, 考慮されるコールバックインスタンスをブロックできるかどうかに応じて, 2 つのケースを区別する
