--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/conclusion_future_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/conclusion_future_work.tex
@@ -3,10 +3,13 @@
 \section{CONCLUSION AND FUTURE WORK}
 \label{sec: conclusion and future work}
 
-\begin{frame}{}
+\begin{frame}{まとめ}
     \begin{itemize}
-        \item 本論文では, マルチスレッドエグゼキュータに展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, それらの応答時間分析手法を開発する
-\item また, 複数のシングルスレッドエグゼキュータのワークロードを 1 つのマルチスレッドエグゼキュータにマージすると, 応答時間が長くなるリスクも特定されている
-\item 今後の作業では, 任意のデッドラインを持つチェーンや, チェーンがいくつかの共通のコールバックを持つ有向非循環グラフモデルのシステムなど, より一般的で複雑な設定にテクニックを拡張する
+        \item マルチスレッドエグゼキュータに展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, それらの応答時間分析手法を開発した
+        \item 複数のシングルスレッドエグゼキュータのワークロードを 1 つのマルチスレッドエグゼキュータにマージすると, 応答時間が長くなるリスクを特定した
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Future work}
+    任意のデッドラインを持つチェーンや, チェーンがいくつかの共通のコールバックを持つDAGグラフモデルのシステムなど, より一般的で複雑な設定に手法を拡張する
 \end{frame}
