--- a/setting.tex
+++ b/setting.tex
@@ -146,6 +146,12 @@
     \setbeamercolor{block title}{use=structure,fg=structure.fg!80,bg=structure.fg!20!bg}
     \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!50!bg, fg=black}
 }
+% -- bibtex --
+\setbeamerfont{bibliography item}{size=\scriptsize}
+\setbeamerfont{bibliography entry author}{size=\scriptsize}
+\setbeamerfont{bibliography entry title}{size=\scriptsize}
+\setbeamerfont{bibliography entry location}{size=\scriptsize}
+\setbeamerfont{bibliography entry note}{size=\scriptsize}
 
 
 %%%%% Original Command %%%%%
@@ -156,7 +162,7 @@
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
-\newcommand{\tu}[1]{\textbf{\underline{#1}}}
+\newcommand{\tb}[1]{\textbf{#1}}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
 \newcommand{\db}[1]{\doublebox{#1}}
 \newcommand{\hlink}[2]{\hyperlink{#1}{\underline{#2} }}
